--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-svg": "13.4.0",
     "react-native-webview": "11.26.0",
     "styled-components": "^5.3.11",
-    "lottie-react-native": "5.1.4"
+    "lottie-react-native": "5.1.4",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
