--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-webview": "11.26.0",
     "styled-components": "^5.3.11",
     "lottie-react-native": "5.1.4",
-    "expo-updates": "~0.16.4"
+    "expo-updates": "~0.16.4",
+    "expo-camera": "~13.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
